templates/rules.v6
*filter

:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

${extra_chains}

:fw6-after-forward - [0:0]
:fw6-after-input - [0:0]
:fw6-after-logging-forward - [0:0]
:fw6-after-logging-input - [0:0]
:fw6-after-logging-output - [0:0]
:fw6-after-output - [0:0]

:fw6-before-forward - [0:0]
:fw6-before-input - [0:0]
:fw6-before-logging-forward - [0:0]
:fw6-before-logging-input - [0:0]
:fw6-before-logging-output - [0:0]
:fw6-before-output - [0:0]

:fw6-logging-allow - [0:0]
:fw6-logging-deny - [0:0]

:fw6-reject-forward - [0:0]
:fw6-reject-input - [0:0]
:fw6-reject-output - [0:0]

:fw6-skip-to-policy-forward - [0:0]
:fw6-skip-to-policy-input - [0:0]
:fw6-skip-to-policy-output - [0:0]

:fw6-track-forward - [0:0]
:fw6-track-input - [0:0]
:fw6-track-output - [0:0]

:fw6-user-forward - [0:0]
:fw6-user-input - [0:0]
:fw6-user-limit - [0:0]
:fw6-user-limit-accept - [0:0]
:fw6-user-logging-forward - [0:0]
:fw6-user-logging-input - [0:0]
:fw6-user-logging-output - [0:0]
:fw6-user-output - [0:0]

-A INPUT -j fw6-before-logging-input
-A INPUT -j fw6-before-input
-A INPUT -j fw6-after-input
-A INPUT -j fw6-after-logging-input
-A INPUT -j fw6-reject-input
-A INPUT -j fw6-track-input

-A FORWARD -j fw6-before-logging-forward
-A FORWARD -j fw6-before-forward
-A FORWARD -j fw6-after-forward
-A FORWARD -j fw6-after-logging-forward
-A FORWARD -j fw6-reject-forward
-A FORWARD -j fw6-track-forward

-A OUTPUT -j fw6-before-logging-output
-A OUTPUT -j fw6-before-output
-A OUTPUT -j fw6-after-output
-A OUTPUT -j fw6-after-logging-output
-A OUTPUT -j fw6-reject-output
-A OUTPUT -j fw6-track-output

-A fw6-after-input -p udp -m udp --dport 137 -j fw6-skip-to-policy-input
-A fw6-after-input -p udp -m udp --dport 138 -j fw6-skip-to-policy-input
-A fw6-after-input -p tcp -m tcp --dport 139 -j fw6-skip-to-policy-input
-A fw6-after-input -p tcp -m tcp --dport 445 -j fw6-skip-to-policy-input
-A fw6-after-input -p udp -m udp --dport 546 -j fw6-skip-to-policy-input
-A fw6-after-input -p udp -m udp --dport 547 -j fw6-skip-to-policy-input

${before_forward}

-A fw6-before-forward -m rt --rt-type 0 -j DROP
-A fw6-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A fw6-before-forward -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A fw6-before-forward -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A fw6-before-forward -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A fw6-before-forward -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A fw6-before-forward -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ACCEPT
-A fw6-before-forward -p ipv6-icmp -m icmp6 --icmpv6-type 129 -j ACCEPT
-A fw6-before-forward -j fw6-user-forward

${before_input}

-A fw6-before-input -i lo -j ACCEPT
-A fw6-before-input -m rt --rt-type 0 -j DROP
-A fw6-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A fw6-before-input -m conntrack --ctstate INVALID -j fw6-logging-deny
-A fw6-before-input -m conntrack --ctstate INVALID -j DROP
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 129 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 133 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 134 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 135 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 136 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 141 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 142 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-input -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 130 -j ACCEPT
-A fw6-before-input -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 131 -j ACCEPT
-A fw6-before-input -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 132 -j ACCEPT
-A fw6-before-input -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 143 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 148 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 149 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-input -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 151 -m hl --hl-eq 1 -j ACCEPT
-A fw6-before-input -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 152 -m hl --hl-eq 1 -j ACCEPT
-A fw6-before-input -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 153 -m hl --hl-eq 1 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 129 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 144 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 145 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 146 -j ACCEPT
-A fw6-before-input -p ipv6-icmp -m icmp6 --icmpv6-type 147 -j ACCEPT
-A fw6-before-input -s fe80::/10 -d fe80::/10 -p udp -m udp --sport 547 --dport 546 -j ACCEPT
-A fw6-before-input -d ff02::fb/128 -p udp -m udp --dport 5353 -j ACCEPT
-A fw6-before-input -d ff02::f/128 -p udp -m udp --dport 1900 -j ACCEPT
-A fw6-before-input -j fw6-user-input

${before_output}

-A fw6-before-output -o lo -j ACCEPT
-A fw6-before-output -m rt --rt-type 0 -j DROP
-A fw6-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 133 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 136 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 135 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 134 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 141 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 142 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-output -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 130 -j ACCEPT
-A fw6-before-output -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 131 -j ACCEPT
-A fw6-before-output -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 132 -j ACCEPT
-A fw6-before-output -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 143 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 148 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-output -p ipv6-icmp -m icmp6 --icmpv6-type 149 -m hl --hl-eq 255 -j ACCEPT
-A fw6-before-output -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 151 -m hl --hl-eq 1 -j ACCEPT
-A fw6-before-output -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 152 -m hl --hl-eq 1 -j ACCEPT
-A fw6-before-output -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 153 -m hl --hl-eq 1 -j ACCEPT
-A fw6-before-output -j fw6-user-output

-A fw6-skip-to-policy-forward -j DROP
-A fw6-skip-to-policy-input -j DROP
-A fw6-skip-to-policy-output -j ACCEPT

-A fw6-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A fw6-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT

${user_input}

-A fw6-user-limit-accept -j ACCEPT

COMMIT
# do not delete end line comment
